<resources>
    <string name="app_name">My Details</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="text2">Login</string>
    <string name="text3">Cancel</string>
    <string name="login">Login Form</string>
    <string name="invalid">Invalid UserName and Password</string>
    <string name="title_activity_resume">resume</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>