<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung1"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/hint"
        android:layout_width="67dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="Hint"
        android:textSize="10sp"
        app:backgroundTint="#977718" />

    <TextView
        android:id="@+id/invalid"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="109dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="79dp"
        android:text="Invalid User id and Password"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login"
        android:layout_width="202dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="94dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#EC0D0D"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="#FF9800"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/teal_200"
        android:textSize="20sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="277dp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="#FF9800"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancelbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="433dp"
        android:text="@string/text3"
        app:backgroundTint="#FA0000" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="433dp"
        android:layout_marginEnd="60dp"
        android:text="@string/text2"
        app:backgroundTint="#FA0000" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/teal_200"
        android:textSize="20sp" />


</RelativeLayout>
